# testData

./: .gitignore
apriltest/: aprilheight.tsv  aprilrotation.tsv  apriltag-mätning.csv  apriltagmätning.tsv
visuellOdometriMotRTK_23.04/: array_smooth.py  comp.sh  dataanalys.py  felanalys.py  felanalys_wo_gnss.py  felanalys_wo_gnss_tidskonstant.py  fix_data.py  instant_plot.py  path_from_wheel_speed.py  run.sh  sensor_location.py  sensor_location_smooth.py  t265_plot_instant.py  test2RealsenseUHO.txt  test3.txt  variansdata.py  vinkelfix.py  vis.py
visuellOdometriMotRTK_23.04/GPS/: CMakeLists.txt  tcp_example.c  tcp_example.cpp
visuellOdometriMotRTK_23.04/T265/: CMakeLists.txt  a.out  cArduino.cpp  cArduino.h  downward_calib.json  forward_calib.json  motion.h  realsense-pose.cpp  rightward_calib.json  t.cpp
visuellOdometriMotRTK_23.04/T265/trash/: cArduino.cpp  predict.cpp
visuellOdometriMotRTK_23.04/gammlasaker/: test1.txt  test1RealsenseHO.txt  test2.txt  test4'.txt  test4RealsenseUHO.txt
visuellOdometriMotRTK_23.04/simplot/: logtest.txt  reader.py  writer.py
visuellOdometriMotRTK_23.04/test/: test3RealsenseHO.txt
visuellOdometriMotRTK_23.04/test/cord222/: dataanalys.py
visuellOdometriMotRTK_23.04/variansdata/: data_left_0.csv  data_left_1.csv  data_left_3.csv  data_left_4.csv  data_right_0.csv  data_right_1.csv  data_right_2.csv  data_right_3.csv  data_right_4.csv
